# zipch

./: .gitignore  LICENSE  README.md  flake.nix  pyproject.toml  setup.py
zipch/: __init__.py  zipcodes.py
