[project]
name = "zipch"
version = "2.0.1"
authors = [
  { name="Sylvain Fankhauser", email="sephi@fhtagn.top" },
]
description = "Database of zipcodes, cantons and municipalities for Switzerland"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/sephii/zipch"
